--- a/assets/less/responsive/largeScreen/views/circles.less
+++ b/assets/less/responsive/largeScreen/views/circles.less
@@ -41,7 +41,7 @@
 				padding: 0;
 				.userimg {
 					width: 100%;
-					margin: 0 0 -4px -2px;
+					margin: 0 0 -5px -4px;
 					padding: 0;
 				}
 				.listname {
